# UPD-client-server

./: .gitignore  LICENSE  README.md
UDP_client/: Cargo.toml  test.txt  test_1.txt
UDP_client/src/: main.rs
UDP_server/: CMakeLists.txt  Makefile  interaction.cpp  interaction.h  lib.cpp  main.cpp  udp_server.cpp  udp_server.h
UDP_server/inc/: interaction.h  lib.h
UDP_server/src/: interaction.cpp  lib.cpp  main.cpp  udp_server.cpp
