[package]
name = "udp_client"
version = "0.1.0"
authors = ["nick <nkatz777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3.4"
crc32fast = "1.2.1"